header text off screen fixed

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -97,7 +97,7 @@ body {
   font-weight: 500;
 
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
